5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1785_3134.log
== TEST (2019-05-30 11:28:19) 
-- CODE:
from numpy import*
v = array(eval(input("Insira um vetor:")))

n = size(v)
v1 = arange(v)
m = ((v*v1**2)/n)**0.5
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:57) 
-- CODE:
from numpy import*
v = array(eval(input("Insira um vetor:")))

n = size(v)
v1 = arange(n)
m = ((v*v1**2)/n)**0.5
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:18) 
-- CODE:
from numpy import*
v = array(eval(input("Insira um vetor:")))

n = size(v)
print(n)
v1 = arange(n)
m = ((v*v1**2)/n)**0.5


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:25) 
-- CODE:
from numpy import*
v = array(eval(input("Insira um vetor:")))
n = size(v)
vt = arange(n)

m = ((v*v1**2)/n)**0.5
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:39) 
-- CODE:
from numpy import*
v = array(eval(input("Insira um vetor:")))
n = size(v)
vt = arange(n)

m = ((v*vt**2)/n)**0.5
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:12) 
-- CODE:
from numpy import*
v = array(eval(input("Insira um vetor:")))
n = size(v)
vt = arange(n)

m = ((v*vt**2)/n)**0.5
print(round(m,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:36:17) 
-- CODE:
from numpy import*
v = array(eval(input("Insira um vetor:")))
n = size(v)
vt = arange(n)

m = ((v*vt**2)/n)**0.5
print(round(m,2))


-- EXECUTION TIME:
0.487834
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1785/3134/main.py", line 7, in <module>
    print(round(m,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:21) 
-- CODE:
from numpy import*
v = array(eval(input("Insira um vetor:")))
n = size(v)
vt = arange(n)

m = ((v*vt**2)/n)**0.5
print(round(m,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:39) 
-- CODE:
from numpy import*
v = array(eval(input("Insira um vetor:")))
n = size(v)
vt = arange(n)

m = ((v*vt**2)/n)**0.5
print(round(m,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:18) 
-- CODE:

v = array(eval(input("Insira um vetor:")))
n = size(v)
vt = arange(n)

m = ((v*vt**2)/n)**0.5
print(round(m,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:54:53) 
-- CODE:
from numpy import*
v = array(eval(input("Insira um vetor:")))
n = size(v)
v1 = arange(n)

m = ((v*vt**2)/n)**0.5
print(round(m,2))


-- EXECUTION TIME:
0.898602
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1785/3134/main.py", line 6, in <module>
    m = ((v*vt**2)/n)**0.5
NameError: name 'vt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
